force-app/main/default/objects/GDL_DistributorEvent__c/GDL_DistributorEvent__c.object-meta.xml
<CustomObject>
    <label>Distributor Event</label>
    <nameField>
        <displayFormat>GDL_E-{0000}</displayFormat>
        <label>Distributor Event ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distributor Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>