force-app/main/default/objects/GDL_DistributorEvent__c/fields/DistributorProfile__c.field-meta.xml
<CustomField>
    <fullName>DistributorProfile__c</fullName>
    <label>Distributor Profile</label>
    <referenceTo>GDL_Profile__c</referenceTo>
    <relationshipLabel>Distributor Events</relationshipLabel>
    <relationshipName>DistributorEvents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>